[gd_scene load_steps=2 format=3 uid="uid://bk24v7lnvnq11"]

[ext_resource type="Script" uid="uid://bqcufrt81a873" path="res://scene/ui/abilities/add/ability_add.gd" id="1_t4lcx"]

[node name="AbilityAdd" type="CanvasLayer" groups=["UI"]]
script = ExtResource("1_t4lcx")

[node name="MarginContainer" type="MarginContainer" parent="." groups=["UI"]]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="SummLabel" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "5 + 4 ="

[node name="AnswerLineEdit" type="LineEdit" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "9"

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="text_changed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/AnswerLineEdit" to="." method="_on_answer_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
